--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: 'Roboto Medium', sans-serif;
+    background-color: #ffffff;
 }
 
 .list{
@@ -34,6 +35,11 @@ font-family: 'Roboto';
         letter-spacing: 0.02em;
         color: #434455;
 }
+
+.section-one{
+background: #2E2F42;
+}
+
 
 .hero-button{
     font-family: 'Roboto';
@@ -144,4 +150,53 @@ font-family: 'Roboto';
         line-height: 1,5;
         letter-spacing: 0.02em;
         color: #F4F4FD;
+}
+
+.footer{
+    background: #2E2F42;
+}
+
+/*  tow list */
+.button-list-one {font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1,5;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;}
+
+.button-list-tow{
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1,5;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.04em;
+        color: #4D5AE5;
+}
+
+.horo-row{
+font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1,2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+
+.bottom-row{
+font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1,5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
