--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,23 @@
 }
 
 body {
-    font-family: 'Roboto Medium', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: #ffffff;
+    color: #434455
+}
+
+.header-logo{
+font-family: "Raleway", sans-serif;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.5;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color:#4d5ae5
+}
+
+.span-studio
+{color:#ffffff
 }
 
 .list{
@@ -16,22 +31,26 @@ body {
     text-decoration: none;
 }
 
+.header-address{
+    font-style: normal
+}
+
 .header-link{
 font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
 
 .header-address-link{
-    font-family: 'Roboto';
+    font-family: 'Roboto' sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        line-height: 1,5;
+        line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
 }
@@ -42,11 +61,12 @@ background: #2E2F42;
 
 
 .hero-button{
-    font-family: 'Roboto';
+    background-color: #4D5AE5
+        font-family 'Roboto', sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
-        line-height: 1,5;
+        line-height: 1.5;
         align-items: center;
         letter-spacing: 0.04em; 
         color: var(--title-color);
@@ -57,7 +77,7 @@ background: #2E2F42;
         font-style: normal;
         font-weight: 700;
         font-size: 56px;
-        line-height: 1,07;
+        line-height: 1.07;
         text-align: center;
         letter-spacing: 0.02em;
 color: var(--title-color);
@@ -81,7 +101,7 @@ font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
-    line-height: 1,2;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
@@ -91,7 +111,7 @@ font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 1,5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -101,7 +121,7 @@ font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
-        line-height: 1,1;
+        line-height: 1.1;
         text-align: center;
         letter-spacing: 0.02em;
         text-transform: capitalize;
@@ -109,11 +129,12 @@ font-family: 'Roboto';
 }
 
 .hero-three{
+    background-color: #F4F4FD;
     font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
-        line-height: 1,1;
+        line-height: 1.11;
         text-align: center;
         letter-spacing: 0.02em;
         text-transform: capitalize;
@@ -121,11 +142,12 @@ font-family: 'Roboto';
 }
 
 .human-hero{
+    background-color: #FFFFFF;
     font-family: 'Roboto';
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
-        line-height: 1,2;
+        line-height: 1.2;
         text-align: center;
         letter-spacing: 0.02em;
         color: #2E2F42;
@@ -143,11 +165,11 @@ font-family: 'Roboto';
 }
 
 .footer-information{
-    font-family: 'Roboto';
+    font-family: "Raleway", sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        line-height: 1,5;
+        line-height: 1.5;
         letter-spacing: 0.02em;
         color: #F4F4FD;
 }
@@ -161,7 +183,7 @@ font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,5;
+    line-height: 1.5;
     display: flex;
     align-items: center;
     text-align: center;
