--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,11 @@ color:#4d5ae5
 }
 
 .span-studio
-{color:#ffffff
+{
+    color: #f4f4fd;
 }
+    
+
 
 .list{
     list-style: none;
@@ -77,7 +80,7 @@ background: #2E2F42;
         font-style: normal;
         font-weight: 700;
         font-size: 56px;
-        line-height: 1.07;
+        line-height: 1.17;
         text-align: center;
         letter-spacing: 0.02em;
 color: var(--title-color);
@@ -179,18 +182,8 @@ font-family: 'Roboto';
 }
 
 /*  tow list */
-.button-list-one {font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: #FFFFFF;}
 
-.button-list-tow{
+.button-list-tow {
     font-family: 'Roboto';
         font-style: normal;
         font-weight: 500;
@@ -201,6 +194,16 @@ font-family: 'Roboto';
         text-align: center;
         letter-spacing: 0.04em;
         color: #4D5AE5;
+}
+
+.button-list-tow:hover {
+   background-color: #404bbf;
+   content: var(--title-color);
+}
+
+.button-list-tow:focus {
+ background-color: #404bbf;
+ color: var(--title-color);
 }
 
 .horo-row{
