--- a/css/styles.css
+++ b/css/styles.css
@@ -121,19 +121,7 @@ color: var(--title-color);
 }
 
 
-/* .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-} */
+/*  */
 
 .about-name{
 font-family: 'Roboto';
