goit-markup-homew-02

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,12 +103,11 @@ background:var(--navy-color);
         color: var(--title-color);
 }
 .hero-button:hover{
-background-color: var(--ocean-color);
+background-color:var(--ocean-color);
 }
 .hero-button:focus{
-background-color: var(--ocean-color);
+background-color:var(--ocean-color);
 }
-
 
 .hero-one{
     font-family: 'Roboto';
@@ -153,7 +152,7 @@ font-family: 'Roboto';
         font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
-        
+        text-align: center;
         letter-spacing: 0.02em;
         text-transform: capitalize;
         color:var(--navy-color);
@@ -173,7 +172,7 @@ background-color:var(--cloud-color);
         font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
-        
+        text-align: center;
         letter-spacing: 0.02em;
         text-transform: capitalize;
         color: var(--navy-color);
@@ -186,7 +185,7 @@ background-color:var(--cloud-color);
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
-        
+        text-align: center;
         letter-spacing: 0.02em;
         color:var(--navy-color);
 }
@@ -197,7 +196,7 @@ background-color:var(--cloud-color);
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
-        
+        text-align: center;
         letter-spacing: 0.02em;
         color:var(--slate-color);
 }
@@ -229,7 +228,7 @@ background-color: var(--title-color);
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
-        display: flex;
+        text-align: center;
         letter-spacing: 0.04em;
         color: var(--iris-color);
         background-color:var(--cloud-color);
