--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,10 @@ font-family: 'Roboto',sans-serif;
     color:var(--navy-color);
 }
 
+.photo360{
+    width: 360px;
+}
+
 .bottom-row{
 font-family: 'Roboto';
     font-style: normal;
