--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ background:var(--navy-color);
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
-        align-items: center;
+        /* align-items: center; */
         letter-spacing: 0.04em; 
         color: var(--title-color);
 }
